# CerebroTask

./: .gitignore  CMakeLists.txt  README.md
include/: OpenaiAPI.hpp  Task.hpp  User.hpp  UserBinData.hpp  UserData.hpp  UserTxtData.hpp  homepage.hpp  loginpage.hpp  page.hpp  ui.hpp
src/: CMakeLists.txt  OpenaiAPI.cpp  Task.cpp  User.cpp  UserBinData.cpp  UserData.cpp  UserTxtData.cpp  homepage.cpp  loginpage.cpp  main.cpp  ui.cpp
test/: CMakeLists.txt  fileTest.cpp  openaiTest.cpp  task_test.cpp  ui_test.cpp  user_test.cpp
test/testTxtFiles/: test.txt  testMultipleLines.txt  testMultipleLines2.txt
